# CREWAI2026

./: .gitignore  main.py  requirements.txt  sessions.json  telegram_bot.py  test.py
agents/: accounts_agent.py  users_agent.py
auth/: login.py
config/: settings.py
crews/: accounts_crew.py  users_crew.py
database/: connection.py
llm/: ollama_client.py
myproject/: .env.example  .gitignore  .resolv.conf.swk  .resolv.conf.swl  .resolv.conf.swm  .resolv.conf.swn  .resolv.conf.swo  .resolv.conf.swp  README.md  TROUBLESHOOTING.md  app.py  groups.routes.js  pyproject.toml  telegram_bot.py  test_ollama_crewai.py
myproject/knowledge/: user_preference.txt
myproject/src/myproject/: bot_lock.py  company_lookup.py  crew.py  crew_runner.py  main.py  runtime_context.py  telegram_bot_app.py  telegram_user_store.py  user_login.py
myproject/src/myproject/config/: agents.py  crew_setup.py  llm_config.py  tasks.py
myproject/src/myproject/tools/: tools.py
tasks/: accounts_tasks.py  users_tasks.py
tools/: accounts_tools.py  users_tools.py
