[project]
name = "myproject"
version = "0.1.0"
description = "MyProject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-telegram-bot>=21.0,<23",
    "reportlab>=4.0.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.4.2",
]

[project.scripts]
myproject = "myproject.main:run"
run_crew = "myproject.main:run"
crewai-telegram = "myproject.telegram_bot_app:main"
train = "myproject.main:train"
replay = "myproject.main:replay"
test = "myproject.main:test"
run_with_trigger = "myproject.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myproject"]

[tool.crewai]
type = "crew"
